k8s/report-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-server
  # namespace: tomcat-test   # 파일에 네임스페이스 고정하고 싶으면 주석 해제
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-server
  template:
    metadata:
      labels:
        app: report-server
    spec:
      # 컨테이너는 1000:1000 권한으로 실행, 볼륨 그룹도 1000 적용
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      # 업로드 디렉토리 생성 및 소유권 변경 (root 로 실행)
      containers:
        - name: report-server
          image: baeseokin/report-server:0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uploads
              mountPath: /app/uploads   # ← 복수형으로 통일
              # subPath: uploads        # 필요 시 PV 내 하위폴더만 쓸 때 주석 해제

      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-pvc       # hostpath(StorageClass)로 Bound 된 PVC
---
apiVersion: v1
kind: Service
metadata:
  name: report-server
  # namespace: tomcat-test
spec:
  selector:
    app: report-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      nodePort: 30002
  type: NodePort
