k8s/report-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-ingress
  namespace: report
  annotations: 
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - host: "" 
    http:
      paths:
      # ✅ API 요청은 report-server 로 전달
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: report-server
            port:
              number: 3001

      # ✅ 정적파일 (JS, CSS 등)
      - path: /assets/
        pathType: Prefix
        backend:
          service:
            name: report-form-ui-service
            port:
              number: 80

      # ✅ 나머지는 모두 UI 서비스로 (SPA 라우팅)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: report-form-ui-service
            port:
              number: 80
